render_image in upload.html now takes a a list of Category objects and is able to render them by addressing their attributes

--- a/object_detection_app_p3/templates/upload.html
+++ b/object_detection_app_p3/templates/upload.html
@@ -43,14 +43,14 @@
     <div id="result">
       {% if result|length > 0 %}
         <div id="label">original</div>
-        <div><img id="photo" src="{{ result['original'] }}" align="left" hspace="10" vspace="10"></div>
+        <div><img id="photo" src="{{ result[0].image }}" align="left" hspace="10" vspace="10"></div>
         <p>
           <a href="javascript:void(0);" onclick="ChangePhoto('original');">original</a>
           </br>
-          {% for name, img in result.items() %}
-            {% if name != 'original' %}
+          {% for category in result %}
+            {% if category.name != 'original' %}
               <a href="javascript:void(0);"
-                 onclick="ChangePhoto('{{ name }}', '{{ result[ name ] }}');">{{ name }}</a>
+                 onclick="ChangePhoto('{{ category.name }}', '{{ category.image }}');">{{ category.name }}</a>
               </br>
             {% endif %}
           {% endfor %}
