added dynamic threshold

--- a/object_detection_app_p3/static/style.css
+++ b/object_detection_app_p3/static/style.css
@@ -43,5 +43,20 @@
     font-size: 25px;
     font-weight: bold;
   }
- 
+  /* #container {
+    position: relative;
+  }  */
+  
+  /* #upload {
+    padding: 5px;
+      width: 30%;
+      height: 50%;
+      position: absolute;
+  } */
+  /* #threshold {
+    padding: 5px;
+    margin-left: 50%;
+  
+    height: 50%;
+  } */
   
