--- a/object_detection_app_p3/templates/upload.html
+++ b/object_detection_app_p3/templates/upload.html
@@ -25,6 +25,10 @@
         setTimeout(function() {
           document.getElementById("upload").submit();}, 100);
         }
+        document.querySelector('.sub').addEventListener('click', function () {
+    const guess = Number(document.querySelector('.trsVal').value);
+    console.log(guess, typeof guess);
+});
     </script>
 
   </head>
@@ -40,10 +44,20 @@
         {{ render_field(photo_form.input_photo) }}
         <p><input type="button" onclick="WaitDisplay();" value="Upload"></p>
       </form>
-    </div>
+      
 
-    <hr>
+    
+    <form id="threshold"  method="get">
+      <label for="trs">Detection threshold:</label>
+      <!-- <input type="text" placeholder="Enter a value between 0-1" id="treshVal" name="tresh"><br><br> -->
+      <input type="number" class="trsVal" placeholder="Enter a value between 0-1"><br><br>
+      <button class="sub">Submit</button>
+      <button type="reset" value="Reset">Reset</button>
+    </form>
 
+  </div>
+  <br><br>
+  <hr>
     <div id="result">
       {% if result|length > 0 %}
         <div id="label">original</div>
@@ -65,6 +79,6 @@
     <div id="loading" style="display:none">
       <h2>Detecting control elements...</h2>
     </div>
-
+    <script src="script.js"></script>
   </body>
 </html>
