--- a/object_detection_app_p3/templates/upload.html
+++ b/object_detection_app_p3/templates/upload.html
@@ -25,10 +25,7 @@
         setTimeout(function() {
           document.getElementById("upload").submit();}, 100);
         }
-        document.querySelector('.sub').addEventListener('click', function () {
-    const guess = Number(document.querySelector('.trsVal').value);
-    console.log(guess, typeof guess);
-});
+
     </script>
 
   </head>
@@ -47,12 +44,10 @@
       
 
     
-    <form id="threshold"  method="get">
-      <label for="trs">Detection threshold:</label>
-      <!-- <input type="text" placeholder="Enter a value between 0-1" id="treshVal" name="tresh"><br><br> -->
-      <input type="number" class="trsVal" placeholder="Enter a value between 0-1"><br><br>
+    <form id="threshold" method=post action={{ url_for('trsvalue') }} enctype="multipart/form-data"> 
+      <label>Detection threshold:</label>
+      <input name="tt" type="number" class="trsVal" placeholder="Enter a value between 0-1" step="0.01" min="0" max="1"><br><br>
       <button class="sub">Submit</button>
-      <button type="reset" value="Reset">Reset</button>
     </form>
 
   </div>
@@ -79,6 +74,6 @@
     <div id="loading" style="display:none">
       <h2>Detecting control elements...</h2>
     </div>
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>  
   </body>
 </html>
