implemented dynamic threshold, tested and verified

--- a/object_detection_app_p3/templates/upload.html
+++ b/object_detection_app_p3/templates/upload.html
@@ -63,7 +63,7 @@
           </br>
           {% for category in result %}
             {% if category.name != 'original' %}
-              <a href="javascript:void(0);"
+              <a href="javascript:void(0);" id="allLabels"
                  onclick="ChangePhoto('{{ category.name }}', '{{ category.image }}','{{ category.description }}');">{{ category.name }}</a>
               </br>
             {% endif %}
